# SafeSurveil-AIxBio

./: .env.example  .gitignore  LICENSE  README.md  openapi.json  pyproject.toml
backend/app/: __init__.py  demo_data.py  main.py  paths.py  settings.py
data/accessions/: accession_manifest_schema.json  ast_label_filtering_rules.json  dataset_scope.json  metadata_normalization_rules.json  seed_accession_manifest.csv  source_priority_policy.json
data/snapshots/: 2026-04-20_phase3_foundation_snapshot.json  dataset_acceptance_matrix.json  dataset_freeze_procedure.json  dataset_qa_report_template.json  example_split_manifest.csv  split_strategy.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
reports/: safesurveil_literature_audit.md
reports/figures/: safesurveil_architecture.drawio
reports/latex/: safesurveil_aixbio_report.tex
scripts/: build_live_sample_input.py  export_openapi.py  run_evidence_smoke.py  run_live_retrieval.py  run_phase6b_acceptance.py  run_phase8_acceptance_matrix.py  run_phase8_closure_gate.py  run_prediction_smoke.py  run_v2_curl_matrix.py
tests/: conftest.py
tests/backend/: test_phase6_backend_orchestration.py  test_phase7_acceptance_gate.py  test_phase7_analyst_qa_prompt.py  test_phase7_copilot_context.py  test_phase7_copilot_endpoints.py  test_phase7_copilot_safety_regressions.py  test_phase7_decision_explanation_prompt.py  test_phase7_llm_client.py  test_phase7_queue_summary_prompt.py  test_phase7_semantic_ui_prompt.py  (+8 more)
(+118 files in other folders)
